gallery mason update

--- a/public/styles.css
+++ b/public/styles.css
@@ -125,8 +125,9 @@ body {
     box-sizing: inherit;
   }
   
-  .image-gallery {
+  .hike-gallery {
     column-gap: 1.5em;
+    justify-content: center;
   }
   
   .image {
@@ -141,21 +142,21 @@ body {
   
   /* Masonry on large screens */
   @media only screen and (min-width: 1024px) {
-    .image-gallery {
+    .hike-gallery {
       column-count: 4;
     }
   }
   
   /* Masonry on medium-sized screens */
   @media only screen and (max-width: 1023px) and (min-width: 768px) {
-    .image-gallery {
+    .hike-gallery {
       column-count: 3;
     }
   }
   
   /* Masonry on small screens */
   @media only screen and (max-width: 767px) and (min-width: 540px) {
-    .image-gallery {
+    .hike-gallery {
       column-count: 2;
     }
   }
